added components in home

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -1,5 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+//## Poppins
+// @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+// $font-family-base: "Poppins", sans-serif;
 
-$font-family-base: "Poppins", sans-serif;
+//## Roboto
+// @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+// $font-family-base: "Roboto", sans-serif;
 
-$primary: #64ff00;
+//## Lato
+// @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+// $font-family-base: "Lato", sans-serif;
+
+//## Univia
+// $font-family-base: "Univia", sans-serif;
+
+$primary: #eb7e39;
+$secondary: #003fa2;
+
+// $enable-rounded: false;
