--- a/styles/app.scss
+++ b/styles/app.scss
@@ -8,4 +8,6 @@
 
 // components
 @import "./components/carousel";
+@import "./components/header";
 @import "./components/navbar";
+@import "./components/panel";
