--- a/styles/app.scss
+++ b/styles/app.scss
@@ -10,4 +10,5 @@
 @import "./components/carousel";
 @import "./components/header";
 @import "./components/navbar";
+@import "./components/news";
 @import "./components/panel";
