--- a/styles/components/_news.scss
+++ b/styles/components/_news.scss
@@ -10,6 +10,24 @@
         opacity: 0.4;
       }
     }
+    small {
+      // color: green;
+    }
+    &-title {
+      color: $primary;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+    &-text {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+    }
   }
 }
 
