--- a/styles/app.scss
+++ b/styles/app.scss
@@ -8,6 +8,7 @@
 
 // components
 @import "./components/carousel";
+@import "./components/cta";
 @import "./components/header";
 @import "./components/navbar";
 @import "./components/news";
