add Expirations and update styles

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -9,6 +9,7 @@
 // components
 @import "./components/carousel";
 @import "./components/cta";
+@import "./components/expirations";
 @import "./components/header";
 @import "./components/navbar";
 @import "./components/news";
