--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,10 +7,12 @@
 @import "./base/typography";
 
 // components
+@import "./components/breadcrumb";
 @import "./components/carousel";
 @import "./components/cta";
 @import "./components/expirations";
 @import "./components/header";
+@import "./components/legislations";
 @import "./components/navbar";
 @import "./components/news";
 @import "./components/panel";
