--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -11,8 +11,10 @@ main {
 }
 
 section {
-  padding-top: 80px;
+  padding-top: 40px;
   padding-bottom: 80px;
+
+  // background-color: pink;
 
   h2 {
     font-weight: 400;
