--- a/styles/components/_expirations.scss
+++ b/styles/components/_expirations.scss
@@ -3,12 +3,26 @@
     margin-bottom: 30px;
   }
   .card-header {
-    background-color: $gray-200;
+    height: 80px;
     font-weight: 700;
+    background-color: $primary;
+    color: white;
+    text-transform: uppercase;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  .card-month {
+    font-weight: 300;
+    line-height: 1.2rem;
+    letter-spacing: 0.04rem;
+  }
+  .card-day {
+    font-size: 1.1rem;
+    line-height: 1.6rem;
+    letter-spacing: 0.08rem;
+    font-weight: 600;
   }
   .card-body {
     height: 180px;
@@ -18,9 +32,9 @@
     justify-content: center;
   }
   .card-antetitle {
-    // text-transform: uppercase;
+    text-transform: uppercase;
     // color: $gray-800;
-    font-size: 0.9rem;
+    font-size: 0.74rem;
     margin-bottom: 2px;
   }
   .card-title {
