--- a/styles/components/_news.scss
+++ b/styles/components/_news.scss
@@ -1,13 +1,13 @@
 .news {
   .card {
     .card-image {
-      background-color: darken($secondary, 20%);
+      // background-color: darken($secondary, 20%);
       img {
         width: 100%;
         height: 180px;
         object-fit: cover;
-        filter: grayscale(1);
-        opacity: 0.4;
+        // filter: grayscale(1);
+        // opacity: 0.4;
       }
     }
     &-body {
