--- a/styles/app.scss
+++ b/styles/app.scss
@@ -15,5 +15,6 @@
 @import "./components/legislations";
 @import "./components/navbar";
 @import "./components/news";
+@import "./components/payment-methods";
 @import "./components/panel";
 @import "./components/posts";
