--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -3,7 +3,7 @@ html {
   position: relative;
 }
 body {
-  margin-bottom: 60px;
+  margin-bottom: 120px;
   background-color: #f5f5f5;
 }
 
@@ -25,17 +25,39 @@ section {
 }
 
 footer {
-  background-color: #ddd;
+  color: white;
+  background-color: $dark;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
 
-  display: flex;
-  align-items: center;
+  .container {
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h6 {
+      margin-bottom: 4px;
+    }
+    p {
+      margin-bottom: 0;
+      font-size: 0.9rem;
+    }
+    ul {
+      margin-bottom: 0;
+      list-style: none;
+      padding: 0;
 
-  p {
-    margin-bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      li {
+        padding: 0 4px;
+        a {
+          padding: 8px;
+        }
+      }
+    }
   }
 }
 
