--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -30,6 +30,8 @@
       rgba(2, 0, 36, 0) 100%
     );
 
+    text-shadow: 0 0 12px rgba(#000, 0.2);
+
     display: flex;
     flex-direction: column;
     justify-content: center;
