--- a/styles/components/_legislations.scss
+++ b/styles/components/_legislations.scss
@@ -11,17 +11,22 @@
   ul {
     list-style: none;
     padding-left: 0;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     li {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background-color: $gray-400;
-      margin-bottom: 6px;
-      padding: 8px 12px;
+      background-color: $gray-300;
+      margin-bottom: 8px;
+      padding: 8px 8px 8px 12px;
+      border-radius: 4px;
 
       .btn {
         margin-left: 8px;
+        text-transform: uppercase;
+        font-size: 0.76rem;
+        font-weight: 600;
+        letter-spacing: 0.02rem;
       }
     }
   }
