--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,6 +7,8 @@
 @import "./base/typography";
 
 // components
+@import "./components/banner";
+@import "./components/barcolor";
 @import "./components/breadcrumb";
 @import "./components/carousel";
 @import "./components/cta";
