--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -62,11 +62,53 @@ footer {
 }
 
 @media (max-width: 767px) {
+  body {
+    margin-bottom: 250px;
+  }
   section {
     padding-top: 60px;
     padding-bottom: 60px;
     h2 {
       margin-bottom: 40px;
+    }
+  }
+  footer {
+    color: white;
+    background-color: $dark;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    .container {
+      height: 250px;
+      padding: 20px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      text-align: center;
+      h6 {
+        margin-bottom: 4px;
+      }
+      p {
+        margin-bottom: 0;
+        font-size: 0.9rem;
+      }
+      ul {
+        margin-bottom: 0;
+        list-style: none;
+        padding: 0;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        li {
+          padding: 0 4px;
+          a {
+            padding: 8px;
+          }
+        }
+      }
     }
   }
 }
