--- a/styles/components/_panel.scss
+++ b/styles/components/_panel.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 0 8px $gray-200;
   margin-bottom: 30px;
   background-color: #fff;
+  border-radius: 6px;
   &:hover {
     color: $gray-900;
     box-shadow: 0 0 8px $gray-300;
