added ods, institutional, gtm

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -14,9 +14,11 @@
 @import "./components/cta";
 @import "./components/expirations";
 @import "./components/header";
+@import "./components/institutional";
 @import "./components/legislations";
 @import "./components/navbar";
 @import "./components/news";
+@import "./components/pages";
 @import "./components/payment-methods";
 @import "./components/panel";
 @import "./components/posts";
