--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -2,9 +2,12 @@
   &.detail {
     img {
       width: 100%;
-      height: 400px;
+      height: 460px;
       object-fit: cover;
       margin-bottom: 30px;
+    }
+    .lead {
+      font-weight: 400;
     }
   }
 }
