--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -1,6 +1,6 @@
 .posts {
   &.detail {
-    img {
+    .cover {
       width: 100%;
       height: 460px;
       object-fit: cover;
@@ -8,6 +8,17 @@
     }
     .lead {
       font-weight: 400;
+    }
+    .gallery {
+      margin-bottom: 30px;
+      h5 {
+        margin-bottom: 15px;
+      }
+      .image {
+        width: 100%;
+        height: 460px;
+        object-fit: cover;
+      }
     }
   }
 }
