added load more posts

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -22,3 +22,4 @@
 @import "./components/payment-methods";
 @import "./components/panel";
 @import "./components/posts";
+@import "./components/spinner";
