--- a/styles/components/_institutional.scss
+++ b/styles/components/_institutional.scss
@@ -13,20 +13,24 @@
     text-align: center;
     margin-bottom: 20px;
     .card-img-top {
-      // width: 100px;
-      // height: auto;
-      // margin: auto;
+      img {
+        object-fit: cover;
+      }
     }
     .card-body {
       padding: 15px 8px;
+      min-height: 120px;
+      // background-color: teal;
     }
     .card-title {
-      font-size: 1rem;
+      font-size: 0.9rem;
       letter-spacing: -0.01rem;
       color: $secondary;
+      margin-bottom: 4px;
     }
     .card-text {
-      font-size: 0.9rem;
+      font-size: 0.76rem;
+      margin-bottom: 0;
     }
   }
 }
