--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -2,13 +2,13 @@ html {
   min-height: 100vh;
   position: relative;
 }
+
 body {
   margin-bottom: 120px;
   background-color: #f5f5f5;
 }
 
-main {
-}
+main {}
 
 section {
   padding-top: 60px;
@@ -36,16 +36,20 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     a {
       text-decoration: none;
     }
+
     h6 {
       margin-bottom: 4px;
     }
+
     p {
       margin-bottom: 0;
       font-size: 0.9rem;
     }
+
     ul {
       margin-bottom: 0;
       list-style: none;
@@ -54,8 +58,10 @@ footer {
       display: flex;
       align-items: center;
       justify-content: space-between;
+
       li {
         padding: 0 4px;
+
         a {
           padding: 8px;
         }
@@ -68,13 +74,16 @@ footer {
   body {
     margin-bottom: 340px;
   }
+
   section {
     padding-top: 60px;
     padding-bottom: 60px;
+
     h2 {
       margin-bottom: 40px;
     }
   }
+
   footer {
     color: white;
     background-color: $dark;
@@ -90,13 +99,16 @@ footer {
       align-items: center;
       justify-content: space-between;
       text-align: center;
+
       h6 {
         margin-bottom: 4px;
       }
+
       p {
         margin-bottom: 0;
         font-size: 0.9rem;
       }
+
       ul {
         margin-bottom: 0;
         list-style: none;
@@ -105,8 +117,10 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-between;
+
         li {
           padding: 0 4px;
+
           a {
             padding: 8px;
           }
@@ -114,4 +128,6 @@ footer {
       }
     }
   }
+
+
 }
