--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -7,30 +7,60 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   &.primary {
     background-color: $primary;
   }
+
   &.secondary {
     background-color: $secondary;
   }
+
   &.info {
     background-color: $info;
   }
+
   &.warning {
     background-color: $warning;
   }
+
   &.success {
     background-color: $success;
   }
+
   &.danger {
     background-color: $danger;
   }
+
   h3 {
     margin-bottom: 0;
   }
+
   .lead {
     margin-bottom: 0;
     font-size: 1.2rem;
+  }
+}
+
+.banner-top {
+  background-color: $secondary;
+  height: 500px;
+  padding: 0 7%;
+  color: white;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  .lead {
+    margin-bottom: 20px;
+  }
+
+  .ods {
+    background-color: #fff;
+    margin-top: 10px;
+    width: 90%;
+    padding: 10px 15px;
   }
 }
 
@@ -38,8 +68,17 @@
   .banner {
     text-align: center;
     flex-direction: column;
+
     .lead {
       margin-bottom: 20px;
+    }
+  }
+
+  .banner-top {
+    height: 360px;
+
+    .ods {
+      width: 60%;
     }
   }
 }
