add & update banner & navbar

--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -8,6 +8,11 @@
   align-items: center;
   justify-content: space-between;
 
+  &-box {
+    padding: 20px;
+    flex-direction: column;
+    align-items: start;
+  }
   &.primary {
     background-color: $primary;
   }
@@ -33,12 +38,16 @@
   }
 
   h3 {
-    margin-bottom: 0;
+    margin-bottom: 4px;
+  }
+  h4 {
+    margin-bottom: 8px;
   }
 
   .lead {
-    margin-bottom: 0;
-    font-size: 1.2rem;
+    margin-bottom: 16px;
+    font-size: 1.15rem;
+    line-height: 1.45rem;
   }
 }
 
@@ -71,8 +80,17 @@
     text-align: center;
     flex-direction: column;
 
+    &-box {
+      padding: 20px;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h4 {
+    }
+
     .lead {
-      margin-bottom: 20px;
+      margin-bottom: 16px;
     }
   }
 
