se actualizo el logo y se ajusto navbar y breadcrumbs

--- a/styles/components/_breadcrumb.scss
+++ b/styles/components/_breadcrumb.scss
@@ -3,7 +3,8 @@
   margin-bottom: 0;
   // padding: 20px 0;
   .breadcrumb-item {
-    font-size: 0.8em;
+    font-size: 0.74rem;
     text-transform: uppercase;
+    font-weight: 600;
   }
 }
